# data-technical-test

./: Makefile  README.md  pyproject.toml
dataset/: 2021-03-02_03:39:33.json  2021-03-02_22:14:16.json  2021-03-03_003931.json  2021-03-05_215649.json  2021-03-05_21:39:54.json  2021-03-05_221537.json  2021-03-05_224720.json  2021-03-05_224833.json  2021-03-05_22:39:19.json  2021-03-12_024645.json  2021-03-20_154825.json  2021-04-06_014939.json  2021-04-14_15:31:55.json  2021-04-30_00:26:37.json  2021-04-30_02:13:06.json  2021-05-02_033041.json  2021-05-06_010515.json  2021-05-09_03:30:37.json  2021-05-14_18:22:15.json  2021-05-23_03:30:17.json  2021-05-30_03:30:10.json  2021-06-06_033054.json  2021-06-06_03:30:54.json  2021-06-13_033015.json  2021-06-13_03:30:15.json  2021-06-20_03:30:18.json  2021-06-27_033021.json  2021-06-27_03:30:21.json  2021-07-04_033049.json  2021-07-04_03:30:49.json  2021-07-11_03:30:42.json  2021-07-18_03:30:46.json  2021-07-25_033039.json  2021-07-25_03:30:39.json  2021-08-01_03:30:19.json  2021-09-19_03:30:11.json  2021-09-26_033015.json  2021-09-26_03:30:15.json  2021-10-03_033012.json  2021-10-03_03:30:12.json  (+27 more)
