[tool.poetry]
name = "data-technical-test"
# The version listed here is just a placeholder, the real package version is derived from the github release tag
# When the package is installed from gemfury, the real version is used
version = "0.0.1"

description = "Python code"
authors = [
    "Etienne Soulard-Geoffrion <etienne.soulard-geoffrion@clinia.com>",
    "Charles Gao <charles.gao@clinia.com>",
    "Jonathan Chansin <jonathan.chansin@clinia.com>"]
readme = "README.md"

[tool.poetry.scripts]
main = "data_technical_test.main:main"

[tool.poetry.dependencies]
python = "~3.8.6"
pyspark = "~3.2.0"
typer = {extras = ["all"], version = "^0.4.2"}
pandas = "~1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
